# ctx

./: .gitattributes  .gitignore  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
completions/: ctx.bash  ctx.zsh
man/: ctx.1
shell/: ctx.sh  ctx.zsh
src/ctx/: __init__.py  __main__.py  cli.py  errors.py  formatting.py  shell.py  storage.py  validation.py
tests/: test_cli.py  test_shell_hardening.py  test_shell_integration.py  test_storage.py  test_validation.py
